[gd_scene load_steps=2 format=3 uid="uid://qttkc81jm1e4"]

[ext_resource type="Script" uid="uid://jps6onqyiexh" path="res://MultiPlayer/Server_Join.gd" id="1_7poie"]

[node name="Server_Join" type="Node2D"]
script = ExtResource("1_7poie")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
offset_top = 23.0
offset_right = 300.0
offset_bottom = 107.0
theme_override_constants/separation = 40

[node name="Player_Name" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Username"

[node name="Server_IP" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2

[node name="ServerIP_Tip" type="RichTextLabel" parent="VBoxContainer/Server_IP"]
custom_minimum_size = Vector2(300, 23)
layout_mode = 0
offset_top = -23.0
offset_right = 300.0
text = "Enter the Server's IP and Port:"
fit_content = true
scroll_active = false
vertical_alignment = 2

[node name="IP" type="TextEdit" parent="VBoxContainer/Server_IP"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 0
offset_right = 210.0
offset_bottom = 40.0
placeholder_text = "IP"

[node name="InbetweenFlavour" type="RichTextLabel" parent="VBoxContainer/Server_IP"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 0
offset_left = 210.0
offset_right = 240.0
offset_bottom = 40.0
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PORT" type="TextEdit" parent="VBoxContainer/Server_IP"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 0
offset_left = 240.0
offset_right = 300.0
offset_bottom = 40.0
placeholder_text = "PORT"

[node name="Username_Tip" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(300, 23)
offset_right = 300.0
offset_bottom = 23.0
text = "Enter Your Username:"
fit_content = true
scroll_active = false
vertical_alignment = 2

[node name="Cancel_Button" type="Button" parent="."]
custom_minimum_size = Vector2(157, 31)
offset_top = 160.0
offset_right = 157.0
offset_bottom = 191.0
text = "Back to Main Menu"

[node name="Join_Button" type="Button" parent="."]
offset_left = 196.0
offset_top = 160.0
offset_right = 300.0
offset_bottom = 191.0
text = "Enter Server"

[node name="PORT_Notice" type="RichTextLabel" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(300, 23)
offset_top = 200.0
offset_right = 300.0
offset_bottom = 230.0
text = "PORT must be a number"
vertical_alignment = 1

[connection signal="pressed" from="Cancel_Button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Join_Button" to="." method="_on_join_button_pressed"]
